[package]
name = "hive_dev_connect"
version = "0.1.0"
edition = "2018"
authors = ["TeyKey1 <thierry.kuehni@hotmail.com>"] 
description = "Utility to connect provided probe to provided target on the Hive testrack"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ll-api = { git="https://github.com/probe-rs/hive-software.git", rev="69c1246"}
pca9535 = { version="0.1.0", features= ["std"] }
rppal = { version = "0.13.0", features = ["hal"] }
clap = { version = "3.1.3", features = ["derive", "color", "suggestions"] }
anyhow = "1.0.55"
log = "0.4"
pretty_env_logger = {version = "0.4", git = "https://github.com/TeyKey1/pretty-env-logger.git"}
colored = "2.0.0"
clap-verbosity-flag = "1.0.0"